--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -818,7 +818,8 @@
       "dist/nodes/Transform/SplitOut/SplitOut.node.js",
       "dist/nodes/Transform/Sort/Sort.node.js",
       "dist/nodes/Transform/Summarize/Summarize.node.js",
-      "dist/nodes/EmailParser/EmailParser.node.js"
+      "dist/nodes/EmailParser/EmailParser.node.js",
+      "dist/nodes/OfferEmailGenerator/OfferEmailGenerator.node.js"
     ]
   },
   "devDependencies": {
